<resources>
    <string name="app_name">Contact</string>
    <string-array name="group">
        <item>Friend</item>
        <item>Family</item>
        <item>College</item>
    </string-array>
    <string name="facebook_app_id">1249042985527892</string>
    <string name="fb_login_protocol_scheme">fb1249042985527892</string>
    <string name="forget_password">forget password?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">..or..</string>
    <string name="password">Password</string>
    <string name="contact">Contact</string>
    <string name="weather">Weather</string>
    <string name="settings">Settings</string>
    <string name="create_contact">Create Contact</string>
    <string name="contact_available">Contact Available</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="google">Google</string>
    <string name="google_sync">Google Sync</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search…</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="importmenu">Import</string>
    <string name="selectall">SelectAll</string>
    <string name="recent_search">Recent Search</string>
    <string name="searchbar">searchbar</string>
    <string name="cloud">cloud</string>
    <string name="audio">Audio</string>
    <string name="audio_list">Audio List</string>
    <string name="AboutFragment">AboutFragment</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_setting">Back To Setting</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="details">Details</string>
</resources>